--- a/Tiki/Crawl_Tiki_Products_Data.ipynb
+++ b/Tiki/Crawl_Tiki_Products_Data.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18,7 +18,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "hearders = {\n",
+    "headers = {\n",
     "    'User-Agent':'Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/119.0.0.0 Safari/537.36',\n",
     "    'Accept':'application/json, text/plain, */*',\n",
     "    'Accept-Language': 'en-US,en;q=0.9,vi;q=0.8',\n",
@@ -62,7 +62,7 @@
     "\n",
     "for i in range (1,6):\n",
     "    params['page'] = i\n",
-    "    response = requests.get('https://tiki.vn/api/personalish/v1/blocks/listings', headers=hearders, params=params)\n",
+    "    response = requests.get('https://tiki.vn/api/personalish/v1/blocks/listings', headers=headers, params=params)\n",
     "    if response.status_code == 200:\n",
     "        print('success page ',i)\n",
     "        data = response.json()\n",
@@ -75,13 +75,6 @@
     "df = pd.DataFrame(products_list_id)\n",
     "df.to_csv('products_id_all.csv', index=False)\n"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
